# ESP32RowingMachine

./: .gitignore  CMakeLists.txt  Full_Implementation_Guide.md  Instructions.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
android-app-template/app/src/main/java/com/example/rowingsync/data/: ApiClient.kt
android-app-template/app/src/main/java/com/example/rowingsync/health/: HealthConnectManager.kt
android-app-template/app/src/main/java/com/example/rowingsync/ui/: MainViewModel.kt
components/audio/: CMakeLists.txt  Kconfig  audio.c
components/audio/drivers/: audio_active_buzzer.c  audio_driver.h  audio_i2s.c  audio_passive_buzzer.c
components/audio/include/: audio.h
components/board/: CMakeLists.txt  Kconfig  board.c
components/board/include/: board.h
components/display/: CMakeLists.txt  Kconfig  display.c  display_renderer.c
components/display/drivers/: display_driver.h  display_font5x7.c  display_font5x7.h  display_spi_tft.c  display_ssd1306.c
components/display/include/: display.h
components/hw_hal/: CMakeLists.txt  hw_hal.c  ui_actions.c
components/hw_hal/include/: hw_hal.h
components/indicator_led/: CMakeLists.txt  Kconfig  indicator_led.c
components/indicator_led/include/: indicator_led.h
components/input_buttons/: CMakeLists.txt  Kconfig  input_buttons.c
components/input_buttons/include/: input_buttons.h
components/input_encoder/: CMakeLists.txt  Kconfig  input_encoder.c
components/input_encoder/include/: input_encoder.h
components/touch/: CMakeLists.txt  Kconfig  touch.c
components/touch/drivers/: touch_driver.h  touch_i2c.c  touch_xpt2046.c
components/touch/include/: touch.h
docs/: API.md  ARCHITECTURE.md  ATTRIBUTIONS.md  PHYSICS_MODEL.md  README.md  SETUP.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  ble_ftms_server.c  ble_ftms_server.h  ble_hr_client.c  ble_hr_client.h  config_manager.c  config_manager.h  dns_server.c  dns_server.h  hardware.c  hardware.h  hr_receiver.c  hr_receiver.h  idf_component.yml  main.c  metrics_calculator.c  metrics_calculator.h  rowing_physics.c  rowing_physics.h  sensor_manager.c  sensor_manager.h  session_manager.c  session_manager.h  stroke_detector.c  stroke_detector.h  utils.c  utils.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  wifi_provisioning.c  wifi_provisioning.h
main/web_content/: app.js  index.html  setup.html  style.css
